# otus-cpp-pro-hw3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yaml
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_debug/.cmake/api/v1/reply/: cache-v2-f180a14a7c5cc572ce9c.json  cmakeFiles-v1-8f62c2794f757d781c08.json  codemodel-v2-dc0508a7946cbb8f8c2c.json  index-2023-08-10T16-34-13-0786.json  target-otus-cpp-pro-hw3-Debug-9f00b3c2765be87b5f1a.json  target-otus-cpp-pro-hw3_lib-Debug-0c48bf9f43bd67eaae23.json  target-tests-Debug-313cb0b3e87a402a4820.json
build_debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-c54d19dcc74f1eb3a027.json  codemodel-v2-7e6137ce76afcfdf0981.json  index-2023-08-10T16-32-42-0078.json  target-otus-cpp-pro-hw3-Debug-4c9f4e68c04b34eb211a.json  target-otus-cpp-pro-hw3_lib-Debug-85dcfc06968f57944230.json
build_debug/src/: Makefile
build_debug/tests/: CTestTestfile.cmake  Makefile  tests[1]_include.cmake
build_manual/: CMakeCache.txt  Makefile  cmake_install.cmake
build_manual/src/: Makefile  cmake_install.cmake  run_alloc
build_manual/tests/: Makefile
src/: .gitignore  CMakeLists.txt  main.cpp
src/adapters/: allocator_adapter.h  allocator_adapter.inl  allocator_adapter.ipp
src/allocators/: allocator.cpp  allocator.h  allocator.inl  allocator.ipp  fall_back_allocator.h  fall_back_allocator.inl  fall_back_allocator.ipp  free_list_allocator.h  free_list_allocator.ipp  linear_allocator.cpp  linear_allocator.h  linear_allocator.inl  linear_allocator.ipp  mallocator.cpp  mallocator.h  mallocator.ipp
src/containers/: my_vector.h  my_vector.inl
src/utils/: utils.cpp  utils.h
tests/: CMakeLists.txt  test_HW_tasks.cpp  test_common.cpp  test_free_list_allocator.cpp  test_linear_allocator.cpp  utils.h
