cmake_minimum_required(VERSION 3.12)

project(allocator.src)

set(ALLOCATOR_LIB_BINARY ${PROJECT_NAME} CACHE INTERNAL "")

file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)

add_library(${ALLOCATOR_LIB_BINARY} STATIC ${SOURCES})

set_target_properties(${ALLOCATOR_LIB_BINARY} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
)