cmake_minimum_required(VERSION 3.12)

project(allocator.src)

set(ALLOCATOR_LIB_BINARY ${PROJECT_NAME} CACHE INTERNAL "")

#file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h)
#add_library(${ALLOCATOR_LIB_BINARY} INTERFACE ${SOURCES})
add_library(${ALLOCATOR_LIB_BINARY} INTERFACE)

target_include_directories(
        ${ALLOCATOR_LIB_BINARY}
        INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

set_target_properties(${ALLOCATOR_LIB_BINARY} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
)